--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "bugs": "https://github.com/typhonjs-node-bundle/npmbundle/issues",
   "dependencies": {
     "autoprefixer": "^10.0.0",
+    "less": "^4.0.0",
     "postcss": "^8.0.0",
     "postcss-preset-env": "^6.0.0",
     "rollup-plugin-postcss": "^4.0.0",
-    "sass": "^1.0.0"
+    "sass": "^1.0.0",
+    "stylus": "^0.54.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
