--- a/package.json
+++ b/package.json
@@ -52,10 +52,6 @@
   "repository": "typhonjs-node-rollup/plugin-postcss",
   "scripts": {
     "eslint": "eslint .",
-    "postpack": "rm -f oclif.manifest.json",
-    "posttest": "eslint .",
-    "prepack": "oclif-dev manifest && oclif-dev readme",
-    "test": "nyc mocha --forbid-only \"test/**/*.test.js\"",
-    "version": "oclif-dev readme && git add README.md"
+    "test": "nyc mocha --forbid-only \"test/**/*.test.js\""
   }
 }
