--- a/package.json
+++ b/package.json
@@ -15,15 +15,7 @@
     "stylus": "^0.54.0"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.26.0",
-    "@oclif/plugin-help": "^3.2.1",
-    "@oclif/test": "^1.2.8",
-    "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-oclif": "^3.1.0",
-    "globby": "^10.0.2",
-    "mocha": "^5.2.0",
-    "nyc": "^14.1.1",
+    "eslint": "7.0.0",
     "typhonjs-config-eslint": "^0.6.0"
   },
   "peerDependencies": {
