updated eslint config

--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "author": "typhonrt",
   "bugs": "https://github.com/typhonjs-node-rollup/issues/issues",
   "type": "module",
+  "maintainers": [
+    {
+      "name": "Michael Leahy",
+      "email": "support@typhonjs.io",
+      "url": "https://github.com/typhonrt"
+    }
+  ],
   "dependencies": {
     "autoprefixer": "^10.0.0",
     "less": "^4.0.0",
@@ -15,8 +22,8 @@
     "stylus": "^0.54.0"
   },
   "devDependencies": {
-    "eslint": "7.0.0",
-    "typhonjs-config-eslint": "^0.6.0"
+    "@typhonjs-config/eslint-config": "^0.1.0",
+    "eslint": "^7.0.0"
   },
   "peerDependencies": {
     "rollup": "^2.x"
@@ -27,11 +34,13 @@
   "main": "src/loader/PluginLoader.js",
   "files": [
     "/npm-shrinkwrap.json",
-    "/oclif.manifest.json",
     "/src"
   ],
   "homepage": "https://github.com/typhonjs-node-rollup/plugin-postcss",
   "keywords": [
+    "typhonjs",
+    "rollup",
+    "postcss",
     "oclif-plugin"
   ],
   "license": "MPL-2.0",
@@ -45,6 +54,6 @@
   "repository": "typhonjs-node-rollup/plugin-postcss",
   "scripts": {
     "eslint": "eslint .",
-    "test": "nyc mocha --forbid-only \"test/**/*.test.js\""
+    "prepack": "npm run eslint"
   }
 }
