--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@typhonjs-node-rollup/plugin-postcss",
   "description": "Provides an Oclif plugin to add PostCSS configured for Less, Sass & Styles to rollup-runner.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "typhonrt",
   "bugs": "https://github.com/typhonjs-node-rollup/issues/issues",
   "type": "module",
@@ -22,8 +22,7 @@
     "stylus": "^0.54.0"
   },
   "devDependencies": {
-    "@typhonjs-config/eslint-config": "^0.2.0",
-    "eslint": "^7.0.0"
+    "@typhonjs-node-utils/build-test": "^0.1.0"
   },
   "peerDependencies": {
     "rollup": "^2.x"
