--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@typhonjs-oclif-rollup/plugin-postcss",
-  "description": "Provides an Oclif plugin to add PostCSS configured for Less, Sass & Styles to rollup-runner.",
-  "version": "0.0.2",
+  "description": "Provides an Oclif plugin to add PostCSS configured for Sass, Stylus, and Less to rollup-runner.",
+  "version": "0.0.0",
   "author": "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)",
-  "bugs": "https://github.com/typhonjs-oclif-rollup/issues/issues",
   "type": "module",
+  "main": "src/loader/PluginLoader.js",
   "contributors": [
     "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)"
   ],
@@ -26,7 +26,6 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "main": "src/loader/PluginLoader.js",
   "files": [
     "/npm-shrinkwrap.json",
     "/src"
@@ -48,6 +47,7 @@
     }
   },
   "repository": "github:typhonjs-oclif-rollup/plugin-postcss",
+  "bugs": "https://github.com/typhonjs-oclif-rollup/issues/issues",
   "scripts": {
     "eslint": "eslint .",
     "prepack": "npm run eslint"
