--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
   "bugs": "https://github.com/typhonjs-oclif-rollup/issues/issues",
   "scripts": {
     "eslint": "eslint .",
-    "prepack": "npm run eslint"
+    "prepublishOnly": "npm run eslint"
   }
 }
